--- a/src/app/features/regional/regional-registration/regional-registration.component.html
+++ b/src/app/features/regional/regional-registration/regional-registration.component.html
@@ -1,46 +1,54 @@
-<mat-toolbar>
-  <button mat-mini-fab color="primary" class="btn-back" (click)="goBack()">
-    <mat-icon>arrow_back</mat-icon>
-  </button>
-  {{ regional.id == null ? "Cadastrar Regional" : "Editar Regional" }}
-</mat-toolbar>
+<div fxLayout="row" fxLayoutAlign="center none">
+  <div fxFlex="95%">
+    <mat-toolbar>
+      <button mat-mini-fab color="primary" class="btn-back" (click)="goBack()">
+        <mat-icon>arrow_back</mat-icon>
+      </button>
+      {{ regional.id == null ? "Cadastrar Regional" : "Editar Regional" }}
+    </mat-toolbar>
+  </div>
+</div>
 
 <div class="container" fxLayout="row" fxLayoutAlign="center none">
   <div fxFlex="95%">
-    <form class="mt-10" [formGroup]="formGroup" (ngSubmit)="save()">
-      <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
-        <mat-form-field [fxFlex]="25">
-          <input
-            matInput
-            placeholder="Nome"
-            type="text"
-            formControlName="name"
-            maxlength="150"
-            required
-          />
-          <mat-error *ngIf="formGroup.controls['name'].invalid">Campo obrigatório</mat-error>
-        </mat-form-field>
-      </div>
-      <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
-        <mat-form-field [fxFlex]="25">
-            <mat-label>Comando</mat-label>
-            <mat-select formControlName="commandId" required>
-              <mat-option *ngFor="let command of commands" [value]="command.id">{{ command.name }}</mat-option>
-            </mat-select>
-            <mat-error *ngIf="formGroup.controls['commandId'].invalid">Campo obrigatório</mat-error>
-        </mat-form-field>
-      </div>
+    <mat-card>
+      <mat-card-content>
+        <form class="mt-10" [formGroup]="formGroup" (ngSubmit)="save()">
+          <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
+            <mat-form-field [fxFlex]="25">
+              <input
+                matInput
+                placeholder="Nome"
+                type="text"
+                formControlName="name"
+                maxlength="150"
+                required
+              />
+              <mat-error *ngIf="formGroup.controls['name'].invalid">Campo obrigatório</mat-error>
+            </mat-form-field>
+          </div>
+          <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
+            <mat-form-field [fxFlex]="25">
+                <mat-label>Comando</mat-label>
+                <mat-select formControlName="commandId" required>
+                  <mat-option *ngFor="let command of commands" [value]="command.id">{{ command.name }}</mat-option>
+                </mat-select>
+                <mat-error *ngIf="formGroup.controls['commandId'].invalid">Campo obrigatório</mat-error>
+            </mat-form-field>
+          </div>
 
-      <div class="mt-15 mb-15">
-        <button mat-flat-button color="primary">
-          <mat-icon>save</mat-icon>
-          Salvar
-        </button>
-        <button mat-flat-button type="button" [routerLink]="['/regional']">
-          <mat-icon>close</mat-icon>
-          Cancelar
-        </button>
-      </div>
-    </form>
+          <div class="mt-15 mb-15">
+            <button mat-flat-button color="primary">
+              <mat-icon>save</mat-icon>
+              Salvar
+            </button>
+            <button mat-flat-button type="button" [routerLink]="['/regional']">
+              <mat-icon>close</mat-icon>
+              Cancelar
+            </button>
+          </div>
+        </form>
+      </mat-card-content>
+    </mat-card>
   </div>
 </div>
