--- a/src/app/features/person/person-registration/person-registration.component.html
+++ b/src/app/features/person/person-registration/person-registration.component.html
@@ -1,108 +1,112 @@
-<mat-toolbar>
-  <button mat-mini-fab color="primary" class="btn-back" (click)="goBack()">
-    <mat-icon>arrow_back</mat-icon>
-  </button>
-  {{ person.id == null ? "Cadastrar Integrante" : "Editar Integrante" }}
-  <button mat-flat-button *ngIf="person.id" color="primary" style="margin-left: 3%" (click)="openLatePaymentDialog()" matTooltip="Gerenciar Pagamentos">
-    <mat-icon>attach_money</mat-icon>
-      Mensalidade
-  </button>
-  <span class="spacer"></span>
-</mat-toolbar>
+<div fxLayout="row" fxLayoutAlign="center none">
+  <div fxFlex="95%">
+    <mat-toolbar>
+      <button mat-mini-fab color="primary" class="btn-back" (click)="goBack()">
+        <mat-icon>arrow_back</mat-icon>
+      </button>
+      {{ person.id == null ? "Cadastrar Integrante" : "Editar Integrante" }}
+      <button mat-flat-button *ngIf="person.id" color="primary" style="margin-left: 3%"
+        (click)="openLatePaymentDialog()" matTooltip="Gerenciar Pagamentos">
+        <mat-icon>attach_money</mat-icon>
+        Mensalidade
+      </button>
+      <span class="spacer"></span>
+    </mat-toolbar>
+  </div>
+</div>
 
 <div class="container" fxLayout="row" fxLayoutAlign="center none">
   <div fxFlex="95%">
-    <form class="mt-10" [formGroup]="formGroup" (ngSubmit)="save()">
-      <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
-        <mat-form-field [fxFlex]="50">
-          <input matInput placeholder="Nome" type="text" formControlName="fullName"
-            maxlength="150" required />
-          <mat-error *ngIf="formGroup.controls['fullName'].invalid">Campo obrigatório</mat-error>
-        </mat-form-field>
-      </div>
+    <mat-card>
+      <mat-card-content>
+        <form class="mt-10" [formGroup]="formGroup" (ngSubmit)="save()">
+          <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
+            <mat-form-field [fxFlex]="50">
+              <input matInput placeholder="Nome" type="text" formControlName="fullName" maxlength="150" required />
+              <mat-error *ngIf="formGroup.controls['fullName'].invalid">Campo obrigatório</mat-error>
+            </mat-form-field>
+          </div>
 
-      <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
-        <mat-form-field [fxFlex]="50">
-          <input matInput placeholder="Nome Colete" type="text" formControlName="shortName"
-            maxlength="100" required />
-          <mat-error *ngIf="formGroup.controls['shortName'].invalid">Campo obrigatório</mat-error>
-        </mat-form-field>
-      </div>
+          <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
+            <mat-form-field [fxFlex]="50">
+              <input matInput placeholder="Nome Colete" type="text" formControlName="shortName" maxlength="100"
+                required />
+              <mat-error *ngIf="formGroup.controls['shortName'].invalid">Campo obrigatório</mat-error>
+            </mat-form-field>
+          </div>
 
-      <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
-        <mat-form-field [fxFlex]="50">
-          <mat-label>Grau Hierárquico</mat-label>
-          <mat-select formControlName="hierarchyLevel" required>
-            <mat-option value="XI: Camiseta">XI: Camiseta</mat-option>
-            <mat-option value="X: PP">X: PP</mat-option>
-            <mat-option value="IX: Meio Colete">IX: Meio Colete</mat-option>
-            <mat-option value="VIII: Full">VIII: Full</mat-option>
-            <mat-option value="VI: Diretor">VI: Diretor</mat-option>
-            <mat-option value="VI: Sub-Diretor">VI: Sub-Diretor</mat-option>
-            <mat-option value="VI: Social">VI: Social</mat-option>
-            <mat-option value="VI: ADM">VI: ADM</mat-option>
-            <mat-option value="VI: Sargento de Armas">VI: Sargento de Armas</mat-option>
-          </mat-select>
-          <mat-error *ngIf="formGroup.controls['hierarchyLevel'].invalid">Campo obrigatório</mat-error>
-        </mat-form-field>
-      </div>
+          <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
+            <mat-form-field [fxFlex]="50">
+              <mat-label>Grau Hierárquico</mat-label>
+              <mat-select formControlName="hierarchyLevel" required>
+                <mat-option value="XI: Camiseta">XI: Camiseta</mat-option>
+                <mat-option value="X: PP">X: PP</mat-option>
+                <mat-option value="IX: Meio Colete">IX: Meio Colete</mat-option>
+                <mat-option value="VIII: Full">VIII: Full</mat-option>
+                <mat-option value="VI: Diretor">VI: Diretor</mat-option>
+                <mat-option value="VI: Sub-Diretor">VI: Sub-Diretor</mat-option>
+                <mat-option value="VI: Social">VI: Social</mat-option>
+                <mat-option value="VI: ADM">VI: ADM</mat-option>
+                <mat-option value="VI: Sargento de Armas">VI: Sargento de Armas</mat-option>
+              </mat-select>
+              <mat-error *ngIf="formGroup.controls['hierarchyLevel'].invalid">Campo obrigatório</mat-error>
+            </mat-form-field>
+          </div>
 
-      <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
-        <mat-form-field [fxFlex]="50">
-          <mat-select
-            formControlName="commandId"
-            placeholder="Selecione o comando"
-            (selectionChange)="onCommandChange()"
-          >
-            <mat-option *ngFor="let command of commands" [value]="command.id">
-              {{ command.name }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
+          <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
+            <mat-form-field [fxFlex]="50">
+              <mat-select formControlName="commandId" placeholder="Selecione o comando"
+                (selectionChange)="onCommandChange()">
+                <mat-option *ngFor="let command of commands" [value]="command.id">
+                  {{ command.name }}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
 
-      <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
-        <mat-form-field [fxFlex]="50">
-          <mat-label>Regional</mat-label>
-          <mat-select formControlName="regionalId" (selectionChange)="onRegionalChange()"
-            required>
-            <mat-option *ngFor="let regional of regionals" [value]="regional.id">{{ regional.name }}</mat-option>
-          </mat-select>
-          <mat-error *ngIf="formGroup.controls['regionalId'].invalid">Campo obrigatório</mat-error>
-        </mat-form-field>
-      </div>
+          <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
+            <mat-form-field [fxFlex]="50">
+              <mat-label>Regional</mat-label>
+              <mat-select formControlName="regionalId" (selectionChange)="onRegionalChange()" required>
+                <mat-option *ngFor="let regional of regionals" [value]="regional.id">{{ regional.name }}</mat-option>
+              </mat-select>
+              <mat-error *ngIf="formGroup.controls['regionalId'].invalid">Campo obrigatório</mat-error>
+            </mat-form-field>
+          </div>
 
-      <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
-        <mat-form-field [fxFlex]="50">
-          <mat-label>Divisão</mat-label>
-          <mat-select formControlName="divisionId" required>
-            <mat-option *ngFor="let division of divisions" [value]="division.id">{{ division.name }}</mat-option>
-          </mat-select>
-          <mat-error *ngIf="formGroup.controls['divisionId'].invalid">Campo obrigatório</mat-error>
-        </mat-form-field>
-      </div>
+          <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
+            <mat-form-field [fxFlex]="50">
+              <mat-label>Divisão</mat-label>
+              <mat-select formControlName="divisionId" required>
+                <mat-option *ngFor="let division of divisions" [value]="division.id">{{ division.name }}</mat-option>
+              </mat-select>
+              <mat-error *ngIf="formGroup.controls['divisionId'].invalid">Campo obrigatório</mat-error>
+            </mat-form-field>
+          </div>
 
-      <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
-        <mat-form-field [fxFlex]="50">
-          <mat-label>Situação</mat-label>
-          <mat-select formControlName="isActive" required>
-            <mat-option [value]="true">Ativo</mat-option>
-            <mat-option [value]="false">Inativo</mat-option>
-          </mat-select>
-          <mat-error *ngIf="formGroup.controls['isActive'].invalid">Campo obrigatório</mat-error>
-        </mat-form-field>
-      </div>
+          <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
+            <mat-form-field [fxFlex]="50">
+              <mat-label>Situação</mat-label>
+              <mat-select formControlName="isActive" required>
+                <mat-option [value]="true">Ativo</mat-option>
+                <mat-option [value]="false">Inativo</mat-option>
+              </mat-select>
+              <mat-error *ngIf="formGroup.controls['isActive'].invalid">Campo obrigatório</mat-error>
+            </mat-form-field>
+          </div>
 
-      <div class="mt-15 mb-15">
-        <button mat-flat-button color="primary">
-          <mat-icon>save</mat-icon>
-          Salvar
-        </button>
-        <button mat-flat-button type="button" [routerLink]="['/person']">
-          <mat-icon>close</mat-icon>
-          Cancelar
-        </button>
-      </div>
-    </form>
+          <div class="mt-15 mb-15">
+            <button mat-flat-button color="primary">
+              <mat-icon>save</mat-icon>
+              Salvar
+            </button>
+            <button mat-flat-button type="button" [routerLink]="['/person']">
+              <mat-icon>close</mat-icon>
+              Cancelar
+            </button>
+          </div>
+        </form>
+      </mat-card-content>
+    </mat-card>
   </div>
 </div>
