--- a/src/app/features/person/person-list/person-list.component.html
+++ b/src/app/features/person/person-list/person-list.component.html
@@ -2,7 +2,7 @@
   <div fxFlex="95%">
     <mat-card>
       <mat-card-content>
-        <div fxLayout="row" fxLayoutAlign="start center" class="flex-title-row">
+        <div style="padding-bottom: 20px;" fxLayout="row" fxLayoutAlign="start center" class="flex-title-row">
           <mat-icon class="header-icon" color="primary">group</mat-icon>
           <h2 class="title-no-margin">Integrantes</h2>
           <button mat-mini-fab color="primary" routerLink="register">
