--- a/src/app/features/person/person-registration/person-registration.component.html
+++ b/src/app/features/person/person-registration/person-registration.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="row" fxLayoutAlign="center none">
+<div class="mt-10" fxLayout="row" fxLayoutAlign="center none">
   <div fxFlex="95%">
     <mat-toolbar>
       <button mat-mini-fab color="primary" class="btn-back" (click)="goBack()">
