--- a/src/app/features/person/person-registration/person-registration.component.html
+++ b/src/app/features/person/person-registration/person-registration.component.html
@@ -22,14 +22,16 @@
         <form class="mt-10" [formGroup]="formGroup" (ngSubmit)="save()">
           <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
             <mat-form-field [fxFlex]="50">
-              <input matInput placeholder="Nome" type="text" formControlName="fullName" maxlength="150" required />
+              <mat-label required>Nome Completo</mat-label>
+              <input matInput type="text" formControlName="fullName" maxlength="150" required />
               <mat-error *ngIf="formGroup.controls['fullName'].invalid">Campo obrigatório</mat-error>
             </mat-form-field>
           </div>
 
           <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
             <mat-form-field [fxFlex]="50">
-              <input matInput placeholder="Nome Colete" type="text" formControlName="shortName" maxlength="100"
+              <mat-label required>Nome Colete</mat-label>
+              <input matInput type="text" formControlName="shortName" maxlength="100"
                 required />
               <mat-error *ngIf="formGroup.controls['shortName'].invalid">Campo obrigatório</mat-error>
             </mat-form-field>
@@ -55,8 +57,8 @@
 
           <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
             <mat-form-field [fxFlex]="50">
-              <mat-select formControlName="commandId" placeholder="Selecione o comando"
-                (selectionChange)="onCommandChange()">
+              <mat-label required>Comando</mat-label>
+              <mat-select formControlName="commandId" (selectionChange)="onCommandChange()">
                 <mat-option *ngFor="let command of commands" [value]="command.id">
                   {{ command.name }}
                 </mat-option>
