--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -1,7 +1,7 @@
 <div class="navbar-container" [class.example-is-mobile]="mobileQuery.matches">
   <!-- Top navbar -->
   <mat-toolbar class="navbar" color="primary">
-    <button mat-icon-button (click)="snav.toggle()" #menuBtn>
+    <button mat-icon-button (click)="onMenuClick()" #menuBtn>
       <mat-icon>menu</mat-icon>
     </button>
 
