Mensagem de boas vindas

--- a/src/app/features/home/home.component.css
+++ b/src/app/features/home/home.component.css
@@ -9,3 +9,15 @@
   max-width: 70%;
   height: auto;
 }
+
+.welcome-block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+.welcome {
+  margin: 0;
+  font-size: 28px;
+}
