--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,3 +1,6 @@
 <div class="home-container">
-  <img src="assets/favicon/login.png" alt="18 Admin" class="home-image" />
+  <div class="welcome-block">
+    <h2 class="welcome">Bem-vindo, {{ userName }}!</h2>
+    <img src="assets/favicon/login.png" alt="18 Admin" class="home-image" />
+  </div>
 </div>
