Alinhamento dos botões login e redefinir senha

--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -24,11 +24,9 @@
             Senha é <strong>obrigatório</strong>
           </mat-error>
         </mat-form-field>
-        <div class="full-width">
           <mat-slide-toggle formControlName="rememberMe" color="primary">Lembrar meu endereço de e-mail</mat-slide-toggle>
-        </div>
       </mat-card-content>
-      <mat-card-actions class="login-actions">
+      <mat-card-actions class="login-actions" style="padding: 0 16px">
         <button mat-raised-button id="login" color="primary" [disabled]="loginForm.invalid || loading"
           (click)="login()">
           Login
