--- a/src/app/features/auth/password-reset-request/password-reset-request.component.html
+++ b/src/app/features/auth/password-reset-request/password-reset-request.component.html
@@ -21,7 +21,7 @@
 
             </mat-card-content>
 
-            <mat-card-actions class="login-actions">
+            <mat-card-actions class="login-actions"  style="padding: 0 16px">
                 <button id="submit" mat-raised-button color="primary" [disabled]="form.invalid || loading"
                     (click)="resetPassword()">Redefinir Senha</button>
                 <button id="cancel" mat-button (click)="cancel()">Cancelar</button>
