--- a/src/app/features/auth/password-reset-request/password-reset-request.component.html
+++ b/src/app/features/auth/password-reset-request/password-reset-request.component.html
@@ -1,34 +1,33 @@
 <div class="container login-container" fxLayout="row" fxLayoutAlign="center center">
-    <form [formGroup]="form" fxFlex="30%" fxFlex.sm="50%" fxFlex.xs="90%">
-        <mat-card>
-            <img src="assets/favicon/login.png" alt="18 Admin"
-                class="center-block mb-5pct" />
-            <mat-card-subtitle>Redefinir senha</mat-card-subtitle>
-            <mat-card-content>
+  <form [formGroup]="form" fxFlex="30%" fxFlex.sm="50%" fxFlex.xs="90%">
+    <mat-card>
+      <img src="assets/favicon/login.png" alt="18 Admin" class="center-block mb-5pct" />
+      <mat-card-subtitle>Redefinir senha</mat-card-subtitle>
+      <mat-card-content>
 
-                <mat-form-field class="full-width">
-                    <input id="emailInput" matInput placeholder="Email" formControlName="email" autocomplete="email"
-                        type="email">
+        <mat-form-field class="full-width">
+          <mat-label required>Email</mat-label>
+          <input id="emailInput" matInput formControlName="email" autocomplete="email" type="email">
 
-                    <mat-error id="invalidEmailError" *ngIf="form.controls['email'].hasError('email')">
-                        Por favor utilize um endereço de email valido
-                    </mat-error>
-                    <mat-error id="requiredEmailError" *ngIf="form.controls['email'].hasError('required')">
-                        Email é
-                        <strong>obrigatório</strong>
-                    </mat-error>
-                </mat-form-field>
+          <mat-error id="invalidEmailError" *ngIf="form.controls['email'].hasError('email')">
+            Por favor utilize um endereço de email valido
+          </mat-error>
+          <mat-error id="requiredEmailError" *ngIf="form.controls['email'].hasError('required')">
+            Email é
+            <strong>obrigatório</strong>
+          </mat-error>
+        </mat-form-field>
 
-            </mat-card-content>
+      </mat-card-content>
 
-            <mat-card-actions class="login-actions"  style="padding: 0 16px">
-                <button id="submit" mat-raised-button color="primary" [disabled]="form.invalid || loading"
-                    (click)="resetPassword()">Redefinir Senha</button>
-                <button id="cancel" mat-button (click)="cancel()">Cancelar</button>
-            </mat-card-actions>
+      <mat-card-actions class="login-actions" style="padding: 0 16px">
+        <button id="submit" mat-raised-button color="primary" [disabled]="form.invalid || loading"
+          (click)="resetPassword()">Redefinir Senha</button>
+        <button id="cancel" mat-button (click)="cancel()">Cancelar</button>
+      </mat-card-actions>
 
-        </mat-card>
+    </mat-card>
 
-        <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
-    </form>
+    <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
+  </form>
 </div>
